<resources>
    <string name="app_name">Enigma</string>
    <string name="generate_key_buton_text">Generate</string>
    <string name="enter_you_password_for_private_key_protection">Enter you password for private key protection</string>
    <string name="enter_your_password">Enter your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_initial_setup">InitialSetupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="generate_key_fragment">Generate Private Key</string>
    <string name="setup_guard_node_fragment">Setup guard node connection</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_server_hostname">enter_server_hostname</string>
    <string name="enter_hostname">Set Guard Node Configurations</string>
    <string name="ok">OK</string>
    <string name="shared_preferences">com.example.enigma</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="connection">Connection</string>
    <string name="scan_the_code_with_the_other_device">Scan the code with the other device</string>
    <string name="qr_code">Qr Code</string>
    <string name="scan">Scan</string>
    <string name="back">Back</string>
    <string name="hostname">hostname</string>
    <string name="_10_0_2_2">10.0.2.2</string>
    <string name="contact">contact</string>
    <string name="address">address</string>
    <string name="send">Send</string>
    <string name="sender">Sender</string>
    <string name="_8080">8080</string>
    <string name="port">Directory Port:</string>
    <string name="hostname1">Hostname:</string>
    <string name="message_content">Message Content</string>
    <string name="additional_info">Additional Info</string>
    <string name="optional_info">Optional Info</string>
    <string name="save">Save</string>
</resources>