<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="64dp"
    tools:context=".AddContactFragment">

    <ImageView
        android:id="@+id/qr_code_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#000000"
        android:contentDescription="@string/qr_code"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/scan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_code_text_view"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/qr_code_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_the_code_with_the_other_device"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>